--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build and analyze
         shell: powershell
         run: |
-          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"BrewingCoder_DasBook_3d740e34-8d0f-4712-bb2b-9b5f743ff2ce" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"  /v:"1.0.${{github.run_attempt}}"
+          ${{ runner.temp }}\scanner\dotnet-sonarscanner begin /k:"BrewingCoder_DasBook_3d740e34-8d0f-4712-bb2b-9b5f743ff2ce" /d:sonar.token="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="${{ secrets.SONAR_HOST_URL }}"  /v:"1.0.${{github.run_number}}"
           dotnet build
           dotnet test --no-build --collect "Code Coverage" --logger "trx;LogFileName=test-results.trx"
           ${{ runner.temp }}\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"
