--- a/DasBook/DasBook.csproj
+++ b/DasBook/DasBook.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DasBook.Model\DasBook.Model.csproj" />
+  </ItemGroup>
 </Project>
