--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -24,9 +24,8 @@ jobs:
             dotnet tool install -g Cake.Tool 
             dotnet tool install -g dotnet-sonarscanner
             dotnet tool install -g dotnet-coverage
-            echo "::add-path::${HOME}/.dotnet/tools"
             
         - name: Run Cake Build
           run: |
-            cake build.cake --target=Analyze --verbosity=diagnostic
+            dotnet cake --target=Analyze --verbosity=diagnostic
             
