--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -10,12 +10,12 @@ jobs:
     name: Manual Build Test
     runs-on: ubuntu-latest
     steps:
-        - uses: actions/checkout@v4
+        - uses: actions/checkout@v5
         
         - name: Setup .NET 10
-          uses: actions/setup-dotnet@v4
+          uses: actions/setup-dotnet@v5
           with:
-            dotnet-version: '10.0.x' # Specify the desired .NET 10 version
+            dotnet-version: '10.0.x' 
         
         - name: Setup .NET Tools
           run: |
