--- a/DasBook.Tests/DasBook.Tests.csproj
+++ b/DasBook.Tests/DasBook.Tests.csproj
@@ -29,4 +29,24 @@
     <ProjectReference Include="..\DasBook\DasBook.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AvaloniaXaml Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Remove="TestResults\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="TestResults\**" />
+  </ItemGroup>
+
 </Project>
