--- a/.github/workflows/manual_build.yml
+++ b/.github/workflows/manual_build.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v5
+          with:
+            fetch-depth: 0  
         
         - name: Setup .NET 10
           uses: actions/setup-dotnet@v5
